// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.31.1

package sqlcdb

import (
	"database/sql/driver"
	"encoding/json"
	"fmt"
	"time"

	"github.com/google/uuid"
)

type EdgeLabel string

const (
	EdgeLabelDefault EdgeLabel = "default"
	EdgeLabelTrue    EdgeLabel = "true"
	EdgeLabelFalse   EdgeLabel = "false"
)

func (e *EdgeLabel) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = EdgeLabel(s)
	case string:
		*e = EdgeLabel(s)
	default:
		return fmt.Errorf("unsupported scan type for EdgeLabel: %T", src)
	}
	return nil
}

type NullEdgeLabel struct {
	EdgeLabel EdgeLabel `json:"edge_label"`
	Valid     bool      `json:"valid"` // Valid is true if EdgeLabel is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullEdgeLabel) Scan(value interface{}) error {
	if value == nil {
		ns.EdgeLabel, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.EdgeLabel.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullEdgeLabel) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.EdgeLabel), nil
}

type NodeCategory string

const (
	NodeCategoryTrigger  NodeCategory = "trigger"
	NodeCategoryLogic    NodeCategory = "logic"
	NodeCategoryAction   NodeCategory = "action"
	NodeCategoryTerminal NodeCategory = "terminal"
)

func (e *NodeCategory) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = NodeCategory(s)
	case string:
		*e = NodeCategory(s)
	default:
		return fmt.Errorf("unsupported scan type for NodeCategory: %T", src)
	}
	return nil
}

type NullNodeCategory struct {
	NodeCategory NodeCategory `json:"node_category"`
	Valid        bool         `json:"valid"` // Valid is true if NodeCategory is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullNodeCategory) Scan(value interface{}) error {
	if value == nil {
		ns.NodeCategory, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.NodeCategory.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullNodeCategory) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.NodeCategory), nil
}

type TriggerType string

const (
	TriggerTypeManual    TriggerType = "manual"
	TriggerTypeWebhook   TriggerType = "webhook"
	TriggerTypeScheduler TriggerType = "scheduler"
)

func (e *TriggerType) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = TriggerType(s)
	case string:
		*e = TriggerType(s)
	default:
		return fmt.Errorf("unsupported scan type for TriggerType: %T", src)
	}
	return nil
}

type NullTriggerType struct {
	TriggerType TriggerType `json:"trigger_type"`
	Valid       bool        `json:"valid"` // Valid is true if TriggerType is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullTriggerType) Scan(value interface{}) error {
	if value == nil {
		ns.TriggerType, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.TriggerType.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullTriggerType) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.TriggerType), nil
}

type WorkflowRunStatus string

const (
	WorkflowRunStatusPending   WorkflowRunStatus = "pending"
	WorkflowRunStatusRunning   WorkflowRunStatus = "running"
	WorkflowRunStatusPaused    WorkflowRunStatus = "paused"
	WorkflowRunStatusFailed    WorkflowRunStatus = "failed"
	WorkflowRunStatusCompleted WorkflowRunStatus = "completed"
	WorkflowRunStatusCancelled WorkflowRunStatus = "cancelled"
)

func (e *WorkflowRunStatus) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = WorkflowRunStatus(s)
	case string:
		*e = WorkflowRunStatus(s)
	default:
		return fmt.Errorf("unsupported scan type for WorkflowRunStatus: %T", src)
	}
	return nil
}

type NullWorkflowRunStatus struct {
	WorkflowRunStatus WorkflowRunStatus `json:"workflow_run_status"`
	Valid             bool              `json:"valid"` // Valid is true if WorkflowRunStatus is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullWorkflowRunStatus) Scan(value interface{}) error {
	if value == nil {
		ns.WorkflowRunStatus, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.WorkflowRunStatus.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullWorkflowRunStatus) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.WorkflowRunStatus), nil
}

type WorkflowStatus string

const (
	WorkflowStatusDraft     WorkflowStatus = "draft"
	WorkflowStatusPublished WorkflowStatus = "published"
	WorkflowStatusArchived  WorkflowStatus = "archived"
)

func (e *WorkflowStatus) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = WorkflowStatus(s)
	case string:
		*e = WorkflowStatus(s)
	default:
		return fmt.Errorf("unsupported scan type for WorkflowStatus: %T", src)
	}
	return nil
}

type NullWorkflowStatus struct {
	WorkflowStatus WorkflowStatus `json:"workflow_status"`
	Valid          bool           `json:"valid"` // Valid is true if WorkflowStatus is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullWorkflowStatus) Scan(value interface{}) error {
	if value == nil {
		ns.WorkflowStatus, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.WorkflowStatus.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullWorkflowStatus) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.WorkflowStatus), nil
}

type Node struct {
	ID                uuid.UUID       `json:"id"`
	WorkflowVersionID uuid.UUID       `json:"workflow_version_id"`
	NodeTypeID        uuid.UUID       `json:"node_type_id"`
	Name              string          `json:"name"`
	Config            json.RawMessage `json:"config"`
	PositionX         *float64        `json:"position_x"`
	PositionY         *float64        `json:"position_y"`
	CreatedAt         time.Time       `json:"created_at"`
	UpdatedAt         time.Time       `json:"updated_at"`
}

type NodeType struct {
	ID           uuid.UUID       `json:"id"`
	Type         string          `json:"type"`
	Category     NodeCategory    `json:"category"`
	DisplayName  string          `json:"display_name"`
	MinInDegree  int32           `json:"min_in_degree"`
	MaxInDegree  int32           `json:"max_in_degree"`
	MinOutDegree int32           `json:"min_out_degree"`
	MaxOutDegree int32           `json:"max_out_degree"`
	ConfigSchema json.RawMessage `json:"config_schema"`
	InputSchema  json.RawMessage `json:"input_schema"`
	OutputSchema json.RawMessage `json:"output_schema"`
	ErrorSchema  json.RawMessage `json:"error_schema"`
	CreatedAt    time.Time       `json:"created_at"`
	UpdatedAt    time.Time       `json:"updated_at"`
}

type RunNodeJobsOutbox struct {
	ID                uuid.UUID  `json:"id"`
	RunID             uuid.UUID  `json:"run_id"`
	WorkflowVersionID uuid.UUID  `json:"workflow_version_id"`
	NodeID            uuid.UUID  `json:"node_id"`
	Attempt           int32      `json:"attempt"`
	AvailableAt       *time.Time `json:"available_at"`
	CreatedAt         time.Time  `json:"created_at"`
}

type Workflow struct {
	ID                       uuid.UUID      `json:"id"`
	Name                     string         `json:"name"`
	Description              *string        `json:"description"`
	Status                   WorkflowStatus `json:"status"`
	CreatedAt                time.Time      `json:"created_at"`
	UpdatedAt                time.Time      `json:"updated_at"`
	LastPublishedAt          *time.Time     `json:"last_published_at"`
	LatestPublishedVersionID *uuid.UUID     `json:"latest_published_version_id"`
	LatestVersionID          uuid.UUID      `json:"latest_version_id"`
}

type WorkflowEdge struct {
	ID                uuid.UUID `json:"id"`
	WorkflowVersionID uuid.UUID `json:"workflow_version_id"`
	FromNodeID        uuid.UUID `json:"from_node_id"`
	ToNodeID          uuid.UUID `json:"to_node_id"`
	Label             EdgeLabel `json:"label"`
	CreatedAt         time.Time `json:"created_at"`
	UpdatedAt         time.Time `json:"updated_at"`
}

type WorkflowRun struct {
	ID                 uuid.UUID         `json:"id"`
	WorkflowID         uuid.UUID         `json:"workflow_id"`
	WorkflowVersionID  uuid.UUID         `json:"workflow_version_id"`
	Status             WorkflowRunStatus `json:"status"`
	TriggerType        TriggerType       `json:"trigger_type"`
	CurrentNodeID      uuid.UUID         `json:"current_node_id"`
	CurrentNodeAttempt int32             `json:"current_node_attempt"`
	LastOutput         json.RawMessage   `json:"last_output"`
	Error              *json.RawMessage  `json:"error"`
	StartedAt          *time.Time        `json:"started_at"`
	PausedAt           *time.Time        `json:"paused_at"`
	CancelledAt        *time.Time        `json:"cancelled_at"`
	CompletedAt        *time.Time        `json:"completed_at"`
	FailedAt           *time.Time        `json:"failed_at"`
	CreatedAt          time.Time         `json:"created_at"`
	UpdatedAt          time.Time         `json:"updated_at"`
}

type WorkflowVersion struct {
	ID            uuid.UUID  `json:"id"`
	WorkflowID    uuid.UUID  `json:"workflow_id"`
	Version       int32      `json:"version"`
	CreatedAt     time.Time  `json:"created_at"`
	LastUpdatedAt time.Time  `json:"last_updated_at"`
	PublishedAt   *time.Time `json:"published_at"`
}
