// Orchex — Postgres OLTP schema
// Visualize at https://dbdiagram.io or with the DBML CLI.
//
// Related: README.md (functional + non-functional requirements)
// Graph validation rules mirror data-structure/workflow-graph.go

Project Orchex {
  database_type: 'PostgreSQL'
  Note: '''
    OLTP store for workflow definitions and active run state.

    Timestamp convention: created_at is DEFAULT now() on insert.
    updated_at (and last_updated_at on workflow_versions) is maintained by a
    BEFORE UPDATE FOR EACH ROW trigger (touch_updated_at / touch_last_updated_at).
    Application UPDATEs must not set those columns; the trigger overwrites them.
    Triggers are not representable in DBML — see db/migrations.
  '''
}

// ---------------------------------------------------------------------------
// Reference data
// ---------------------------------------------------------------------------

Enum node_category {
  trigger
  logic
  action
  terminal
}

Table node_types {
  id uuid [pk, default: `gen_random_uuid()`]
  type text [not null, unique, note: 'start | conditional | function | api | response']
  category node_category [not null]
  display_name text [not null]
  min_in_degree int [not null]
  max_in_degree int [not null]
  min_out_degree int [not null]
  max_out_degree int [not null]
  config_schema jsonb [not null, default: '{}', note: 'JSON Schema for nodes.config (builder settings)']
  input_schema jsonb [not null, default: '{}', note: 'JSON Schema for runtime input from upstream']
  output_schema jsonb [not null, default: '{}', note: 'JSON Schema for runtime output to downstream']
  error_schema jsonb [not null, default: '{}', note: 'JSON Schema for node executor error envelope (type, code, message, retryable, details)']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: 'BEFORE UPDATE trigger touch_updated_at']

  Note: '''
    Seeded reference catalog. Degree bounds enforce README graph rules at publish time.
    config/input/output/error schemas are JSON Schema documents seeded per type
    (see node-type-schemas/).

    | type         | category  | in | out | config strictness | i/o strictness |
    |--------------|-----------|----|-----|-------------------|----------------|
    | start        | trigger   | 0  | 1   | optional          | output known   |
    | response     | terminal  | 1  | 0   | strict            | input loose    |
    | conditional  | logic     | 1  | 2   | strict            | pass-through   |
    | function     | logic     | 1  | 1   | strict            | loose object   |
    | api          | action    | 1  | 1   | strict            | output known   |
  '''
}

// ---------------------------------------------------------------------------
// Workflow definition (draft + published versions)
// ---------------------------------------------------------------------------

Enum workflow_status {
  draft
  published
  archived
}

Table workflows {
  id uuid [pk, default: `gen_random_uuid()`]
  name text [not null]
  description text [note: 'Optional; NULL when unset']
  status workflow_status [not null, default: 'draft']
  latest_published_version_id uuid [ref: > workflow_versions.id, note: 'NULL until first publish; then always set while status is published/archived']
  latest_version_id uuid [not null, ref: > workflow_versions.id, note: 'Always set. Create = workflow + empty v1 in one transaction']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: 'BEFORE UPDATE trigger touch_updated_at']
  last_published_at timestamptz [note: 'NULL until first publish']

  Note: '''
    Mutable workflow container.
    latest_published_version_id points to the currently live published version (used for new runs).
    latest_version_id points to the latest editable head (draft or published).
    When no draft exists, both IDs are equal.
    Circular FK with workflow_versions: use a deferred constraint or insert workflow → version → set pointer in one txn.
  '''
}

Table workflow_versions {
  id uuid [pk, default: `gen_random_uuid()`]
  workflow_id uuid [not null, ref: > workflows.id]
  version int [not null, default: 1, note: 'Monotonic per workflow; app-assigned on create/fork (not a global serial)']
  created_at timestamptz [not null, default: `now()`]
  last_updated_at timestamptz [not null, default: `now()`, note: 'BEFORE UPDATE trigger touch_last_updated_at']
  published_at timestamptz [note: 'NULL = draft; set once on publish']

  indexes {
    (workflow_id, version) [unique, name: 'uq_workflow_versions_workflow_version']
  }

  Note: '''
    Editable until published. After publish, treat this version as immutable.
    Runs always pin to a specific published version.

    PostgreSQL migration requirement (partial indexes are not representable in DBML):
    CREATE UNIQUE INDEX uq_workflow_versions_one_draft
      ON workflow_versions (workflow_id)
      WHERE published_at IS NULL;
  '''
}

// ---------------------------------------------------------------------------
// Graph: nodes + edges (DAG)
// ---------------------------------------------------------------------------

Table nodes {
  id uuid [not null, default: `gen_random_uuid()`, note: 'Client-generated logical id; stable across versions']
  workflow_version_id uuid [not null, ref: > workflow_versions.id]
  node_type_id uuid [not null, ref: > node_types.id]
  name text [not null]
  config jsonb [not null, default: '{}', note: 'Instance values validated against node_types.config_schema']
  position_x float [note: 'UI layout only; NULL until canvas places the node']
  position_y float [note: 'UI layout only; NULL until canvas places the node']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: 'BEFORE UPDATE trigger touch_updated_at']

  indexes {
    (workflow_version_id, id) [pk]
    (workflow_version_id, name) [unique, name: 'uq_nodes_version_name']
  }

  Note: '''
    Steps in a workflow graph version.
    PK is (workflow_version_id, id) so the same client node id can exist on v1 and v2 after fork.
    Within one version, id must be unique. Remap in Update response only on rare within-version collisions.
    config holds builder settings; runtime i/o is validated against node_types input/output schemas.
    uq_nodes_version_name is DEFERRABLE INITIALLY DEFERRED (see workflow_edges note).
  '''
}

Enum edge_label {
  default
  true
  false
}

Table workflow_edges {
  id uuid [not null, default: `gen_random_uuid()`, note: 'Client-generated logical id; stable across versions']
  workflow_version_id uuid [not null, ref: > workflow_versions.id]
  from_node_id uuid [not null]
  to_node_id uuid [not null]
  label edge_label [not null, default: 'default']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: 'BEFORE UPDATE trigger touch_updated_at']

  indexes {
    (workflow_version_id, id) [pk]
    (workflow_version_id, from_node_id, label) [unique, name: 'uq_workflow_edges_source_label']
  }

  Note: '''
    Directed edges (from -> to). Cycles disallowed — validated at publish time (DAG).
    Conditional nodes use label=true and label=false for their two outgoing edges.
    PK is (workflow_version_id, id), same fork-stability rule as nodes.
    from/to FKs are composite: (workflow_version_id, from_node_id|to_node_id) → nodes.
    ON DELETE CASCADE: deleting a node removes edges that use it as from or to.
    uq_nodes_version_name and uq_workflow_edges_source_label are DEFERRABLE INITIALLY DEFERRED
    so a save can upsert then delete extras in one transaction without unique collisions.
  '''
}

Ref: workflow_edges.(workflow_version_id, from_node_id) > nodes.(workflow_version_id, id) [delete: cascade]
Ref: workflow_edges.(workflow_version_id, to_node_id) > nodes.(workflow_version_id, id) [delete: cascade]

// ---------------------------------------------------------------------------
// Execution (runtime)
// ---------------------------------------------------------------------------

Enum trigger_type {
  manual
  webhook
  scheduler
}

Enum workflow_run_status {
  pending
  running
  paused
  failed
  completed
  cancelled
}

Table workflow_runs {
  id uuid [pk, default: `gen_random_uuid()`]
  workflow_id uuid [not null, ref: > workflows.id]
  workflow_version_id uuid [not null, ref: > workflow_versions.id]
  status workflow_run_status [not null, default: 'pending']
  trigger_type trigger_type [not null, default: 'manual']
  current_node_id uuid [not null, note: 'Checkpoint. Set to start node on create; never NULL']
  current_node_attempt int [not null, default: 1, note: 'Attempts on the current node. Reset to 1 on checkpoint advance and on manual Retry; incremented by auto-retry']
  last_output jsonb [not null, default: '{}', note: 'Single hop envelope { data: ... }. On create: Start output from the run-start payload ({ data: { payload } }). Overwritten only when a node succeeds, in the same transaction as the checkpoint advance — while current_node_id is in flight this is the predecessor output (that node input). Failure leaves it unchanged for Retry. After Response, this is the workflow result.']
  error jsonb [note: 'NULL when healthy. Last failure: { node_id, error: <node error_schema payload> }. Also holds the transient error between auto-retry attempts. Cleared on retry/success (not on pause-Resume).']
  started_at timestamptz [note: 'NULL while pending; set when execution begins']
  paused_at timestamptz [note: 'NULL unless status=paused']
  cancelled_at timestamptz [note: 'NULL unless status=cancelled']
  completed_at timestamptz [note: 'NULL unless status=completed']
  failed_at timestamptz [note: 'NULL unless status=failed']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: 'BEFORE UPDATE trigger touch_updated_at']

  indexes {
    (id, workflow_version_id) [unique, name: 'uq_workflow_runs_id_version', note: 'Target for composite FKs that must match a run with its pinned version (e.g. outbox rows)']
  }

  Note: '''
    One execution of a published workflow version.
    Resume-from-failure uses current_node_id + last_output + error.
    last_output is the previous node's output only (not a map of every hop).
    current_node_id FK is composite with workflow_version_id → nodes.
    error wraps the failing node's error_schema payload with node_id for run-level context.
    Historical logs/traces belong in ClickHouse later — this column is operational state only.
    Timestamp columns are event markers matched to status by the app layer (not DB CHECKs in v1).

    Auto-retry policy (retryable node errors only; crashes are handled by queue lease + outbox):
    3 total attempts, exponential backoff 10s/40s with +/-25% jitter,
    RATE_LIMITED respects retry_after_ms via max(backoff, retry_after_ms).
    Run stays status=running between attempts with the transient error visible in error.
    Attempts exhausted → status=failed; manual Retry resets current_node_attempt to 1.
    Workers advance state with guarded (conditional) updates on
    (current_node_id, current_node_attempt) so duplicate queue deliveries lose the race
    and drop out instead of double-checkpointing.

    Soft pause (POST /v1/runs/:id/pause): only pending|running → paused (+ paused_at).
    The API does not cancel in-flight worker work. A node already executing may finish and
    checkpoint; if it is the last hop, the run can still become completed after a pause.
    Jobs still in the outbox or SQS (not yet executing) honor paused and do not continue
    until Resume. See docs/README.md Pause section.
  '''
}

Ref: workflow_runs.(workflow_version_id, current_node_id) > nodes.(workflow_version_id, id)

Table run_node_jobs_outbox {
  id uuid [pk, default: `gen_random_uuid()`]
  run_id uuid [not null]
  workflow_version_id uuid [not null]
  node_id uuid [not null, note: 'The node the next worker must execute']
  attempt int [not null, default: 1, note: 'Copied into the queue message; must match workflow_runs.current_node_attempt at delivery or the job is stale']
  available_at timestamptz [note: 'NULL = deliver immediately; set to now() + backoff for auto-retry jobs. Relay only picks rows where available_at IS NULL OR available_at <= now()']
  created_at timestamptz [not null, default: `now()`]

  Note: '''
    Transactional outbox for node jobs (queue messages carry identity only: run_id, node_id, attempt).
    Inserted in the SAME transaction as the workflow_runs checkpoint/attempt update,
    so "save progress" and "next job exists" are atomic — a worker crash can never
    strand a run with a checkpoint but no queue message.
    A relay process claims due rows with FOR UPDATE SKIP LOCKED, pushes them to the
    node-job queue, and deletes them on success (row existence = pending; no status column).
    Duplicate pushes after a relay crash are safe: workers drop stale jobs via the
    staleness check and guarded checkpoint updates.
    Both FKs are composite: (run_id, workflow_version_id) must be the run's pinned
    version, and (workflow_version_id, node_id) must be a node of that version —
    an outbox row can never mix a run with the wrong graph.
  '''
}

Ref: run_node_jobs_outbox.(run_id, workflow_version_id) > workflow_runs.(id, workflow_version_id)
Ref: run_node_jobs_outbox.(workflow_version_id, node_id) > nodes.(workflow_version_id, id)


